k8s/blue-green-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ura-service
  namespace: ura
spec:
  selector:
    app: ura
    version: blue
  ports:
  - port: 80
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ura-blue
  namespace: ura
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ura
      version: blue
  template:
    metadata:
      labels:
        app: ura
        version: blue
    spec:
      containers:
      - name: ura
        image: ura:blue
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ura-green
  namespace: ura
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ura
      version: green
  template:
    metadata:
      labels:
        app: ura
        version: green
    spec:
      containers:
      - name: ura
        image: ura:green
        ports:
        - containerPort: 8000
