k8s/bluegreen-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ura-service-blue
spec:
  selector:
    app: ura
    color: blue
  ports:
  - port: 80
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: ura-service-green
spec:
  selector:
    app: ura
    color: green
  ports:
  - port: 80
    targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ura-blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ura
      color: blue
  template:
    metadata:
      labels:
        app: ura
        color: blue
    spec:
      containers:
      - name: ura
        image: ura:v1
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ura-green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ura
      color: green
  template:
    metadata:
      labels:
        app: ura
        color: green
    spec:
      containers:
      - name: ura
        image: ura:v2
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: ura-service-active
spec:
  selector:
    app: ura
  ports:
  - port: 80
    targetPort: 8000
