k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ura-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ura-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - ura-gateway
  http:
  - match:
    - uri:
        prefix: /v1
    route:
    - destination:
        host: ura-service
        subset: v1
  - match:
    - uri:
        prefix: /v2
    route:
    - destination:
        host: ura-service
        subset: v2
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ura-destination
spec:
  host: ura-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
